File: components/nexus-datastore/pom.xml